--- a/CountryService/CountryService.Web/CountryService.Web.csproj
+++ b/CountryService/CountryService.Web/CountryService.Web.csproj
@@ -12,6 +12,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Calzolari.Grpc.AspNetCore.Validation" Version="6.2.0" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.50.0" />
         <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.50.0" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
