Implemented Data Access Layer

--- a/CountryService/CountryService.gRPC/appsettings.json
+++ b/CountryService/CountryService.gRPC/appsettings.json
@@ -10,5 +10,8 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=CountryServiceDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
 }
