--- a/CountryService/CountryService.BLL/CountryService.BLL.csproj
+++ b/CountryService/CountryService.BLL/CountryService.BLL.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\CountryService.DAL\CountryService.DAL.csproj" />
       <ProjectReference Include="..\CountryService.Domain\CountryService.Domain.csproj" />
     </ItemGroup>
 
