--- a/CountryService/CountryService.DAL/CountryService.DAL.csproj
+++ b/CountryService/CountryService.DAL/CountryService.DAL.csproj
@@ -22,6 +22,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="7.18.0" />
     </ItemGroup>
 
 </Project>
