--- a/CountryService/CountryService.gRPC/CountryService.gRPC.csproj
+++ b/CountryService/CountryService.gRPC/CountryService.gRPC.csproj
@@ -8,12 +8,24 @@
 
     <ItemGroup>
         <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+        <None Remove="Protos\country.proto" />
+        <Protobuf Include="Protos\v1\country.proto">
+          <GrpcServices>Server</GrpcServices>
+          <Access>Public</Access>
+          <ProtoCompile>True</ProtoCompile>
+          <CompileOutputs>True</CompileOutputs>
+          <OutputDir>obj\Debug\net7.0\v1\</OutputDir>
+          <Generator>MSBuild:Compile</Generator>
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Protobuf>
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="12.0.0" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
+        <PackageReference Include="Grpc.AspNetCore.Server" Version="2.49.0" />
+        <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.49.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
           <PrivateAssets>all</PrivateAssets>
@@ -24,6 +36,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="7.18.0" />
     </ItemGroup>
 
     <ItemGroup>
