--- a/CountryService/CountryService.DAL/CountryService.DAL.csproj
+++ b/CountryService/CountryService.DAL/CountryService.DAL.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.0" />
+      <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
         <PrivateAssets>all</PrivateAssets>
