Added Background Service for Handling Uploaded File Data

--- a/CountryService/CountryWiki.Web/CountryWiki.Web.csproj
+++ b/CountryService/CountryWiki.Web/CountryWiki.Web.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\CountryWiki.BLL\CountryWiki.BLL.csproj" />
       <ProjectReference Include="..\CountryWiki.DAL\CountryWiki.DAL.csproj" />
     </ItemGroup>
 
