--- a/CountryService/CountryWiki.Web/appsettings.json
+++ b/CountryService/CountryWiki.Web/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CountryGrpcServiceUri": "http://localhost:5124"
 }
