Implemented Client - side with file uploading

--- a/CountryService/CountryService.gRPC/CountryService.gRPC.csproj
+++ b/CountryService/CountryService.gRPC/CountryService.gRPC.csproj
@@ -26,6 +26,7 @@
         <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
         <PackageReference Include="Grpc.AspNetCore.Server" Version="2.49.0" />
         <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.49.0" />
+        <PackageReference Include="Grpc.AspNetCore.Web" Version="2.49.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
           <PrivateAssets>all</PrivateAssets>
