--- a/CountryService/CountryWiki.Web/CountryWiki.Web.csproj
+++ b/CountryService/CountryWiki.Web/CountryWiki.Web.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.0" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+      <PackageReference Include="Grpc.AspNetCore.Web" Version="2.49.0" />
       <PackageReference Include="Grpc.Net.Client.Web" Version="2.49.0" />
     </ItemGroup>
 
